@@ -10,7 +10,8 @@
 
 - BUG FIXES
 	* Added a remove_Valist function in Python wrapper files, to fix a memory leak problem in pdb2pka
-        * Fixed a bug in smooth.c: bandwidth iband, jband and kband (in grid units) should be positive integers
+	* Fixed a bug in smooth.c: bandwidth iband, jband and kband (in grid units) should be positive integers
+	* Fixed a bug in psize.py: for a pqr file with no ATOM entries but only HETATM entries in it, inputgen.py should still create an APBS input file with reasonable grid lengths
 
 #############################################################################
                                  VERSION 1.1.0 
